[gd_scene load_steps=7 format=3 uid="uid://rubxbrjldnjr"]

[ext_resource type="Script" uid="uid://cdxxh61ecf007" path="res://scripts/ui/flavor_profile_chart.gd" id="1_bopkx"]
[ext_resource type="Texture2D" uid="uid://d1da8ff2og3iu" path="res://assets/ui/deprecated/spider_chart.png" id="1_lvgli"]
[ext_resource type="Shader" uid="uid://cykyoxtd4o6uw" path="res://resources/shaders/flavor_profile.gdshader" id="2_2owfg"]
[ext_resource type="FontFile" uid="uid://q8bvteuqbi7u" path="res://assets/fonts/Courier_Prime/CourierPrime-Regular.ttf" id="3_i8gcd"]

[sub_resource type="LabelSettings" id="LabelSettings_fdlu0"]
font_size = 30

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fdlu0"]
shader = ExtResource("2_2owfg")
shader_parameter/stat_0 = 0.5
shader_parameter/stat_1 = 0.5
shader_parameter/stat_2 = 0.5
shader_parameter/stat_3 = 0.5
shader_parameter/stat_4 = 0.5
shader_parameter/stat_5 = 0.5
shader_parameter/base_color = Color(0.3, 0.5, 0.8, 0.7)
shader_parameter/vertex_color_0 = Color(1, 0.3, 0.3, 1)
shader_parameter/vertex_color_1 = Color(1, 0.8, 0.3, 1)
shader_parameter/vertex_color_2 = Color(0.3, 1, 0.3, 1)
shader_parameter/vertex_color_3 = Color(0.3, 0.8, 1, 1)
shader_parameter/vertex_color_4 = Color(0.3, 0.3, 1, 1)
shader_parameter/vertex_color_5 = Color(1, 0.3, 1, 1)
shader_parameter/min_size = 0.3600000171
shader_parameter/gradient_start = 0.0590000028025
shader_parameter/color_influence = 0.800000038
shader_parameter/edge_softness = 0.02000000095
shader_parameter/glow_intensity = 0.30000001425
shader_parameter/pulse_speed = 0.0
shader_parameter/pulse_amount = 0.0050000002375
shader_parameter/rotation_offset = 1.5708

[node name="FlavorProfileChart" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -2304.0
offset_bottom = -1296.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bopkx")

[node name="PanelTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 60.5
offset_top = 15.0
offset_right = 401.5
offset_bottom = 80.0
grow_horizontal = 2
text = "Current Flavor"
label_settings = SubResource("LabelSettings_fdlu0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Content" type="Control" parent="PanelTitle"]
anchors_preset = 0
offset_top = -15.0
offset_bottom = -15.0

[node name="Labels" type="Control" parent="PanelTitle/Content"]
anchors_preset = 0
offset_left = -60.5
offset_top = -15.0
offset_right = -60.5
offset_bottom = -15.0

[node name="CausticLabel" type="Label" parent="PanelTitle/Content/Labels"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 178.0
offset_top = 151.0
offset_right = 283.0
offset_bottom = 179.64583
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i8gcd")
theme_override_font_sizes/font_size = 25
text = "Caustic"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VoidLabel" type="Label" parent="PanelTitle/Content/Labels"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 200.0
offset_top = 444.025
offset_right = 260.0
offset_bottom = 472.67084
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i8gcd")
theme_override_font_sizes/font_size = 25
text = "Void"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VolatileLabel" type="Label" parent="PanelTitle/Content/Labels"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 16.0
offset_top = 212.0
offset_right = 136.0
offset_bottom = 240.64583
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i8gcd")
theme_override_font_sizes/font_size = 25
text = "Volatile"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResonantLabel" type="Label" parent="PanelTitle/Content/Labels"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 328.0
offset_top = 212.0
offset_right = 448.0
offset_bottom = 240.64583
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i8gcd")
theme_override_font_sizes/font_size = 25
text = "Resonant"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DriftLabel" type="Label" parent="PanelTitle/Content/Labels"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 32.885
offset_top = 383.0
offset_right = 107.884995
offset_bottom = 411.64584
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i8gcd")
theme_override_font_sizes/font_size = 25
text = "Drift"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TemporalLabel" type="Label" parent="PanelTitle/Content/Labels"]
unique_name_in_owner = true
layout_mode = 1
offset_left = 328.0
offset_top = 383.0
offset_right = 448.0
offset_bottom = 411.64584
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_i8gcd")
theme_override_font_sizes/font_size = 25
text = "Temporal"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Chart" type="Control" parent="PanelTitle/Content"]
layout_mode = 1
anchors_preset = 0
offset_left = 29.29
offset_top = 154.49
offset_right = 29.29
offset_bottom = 154.49
scale = Vector2(0.52, 0.52)
metadata/_edit_lock_ = true

[node name="SpiderWeb" type="TextureRect" parent="PanelTitle/Content/Chart"]
layout_mode = 1
offset_right = 1080.0
offset_bottom = 1080.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_lvgli")
metadata/_edit_lock_ = true

[node name="Values" type="ColorRect" parent="PanelTitle/Content/Chart"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_fdlu0")
layout_mode = 0
offset_left = 20.305
offset_top = 20.555
offset_right = 520.3016
offset_bottom = 520.5503
metadata/_edit_lock_ = true
